deploy/test-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-netpol
  namespace: mutatingwebhooktest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.105.66.53/32
    - ipBlock:
        cidr: 10.105.74.214/32
    ports:
    - port: 443
      protocol: TCP
  policyTypes:
    - Egress
