deploy/webhook.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mutateme
  labels:
    app: mutateme
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: mutateme

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutateme
  labels:
    app: mutateme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutateme
  template:
    metadata:
      name: mutateme
      labels:
        app: mutateme
    spec:
      containers:
        - name: mutator
          image: frazergibsonntt/k8s-mutate-webhook:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutateme
  labels:
    app: mutateme
  annotations:
    cert-manager.io/inject-ca-from: default/my-webhook-certificate
webhooks:
  - name: mutateme.default.svc.cluster.local
    clientConfig:
      service:
        name: mutateme
        namespace: default
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        mutateme: enabled
